--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.1",
     "raw-node-rpc": "^1.0.0",
     "socket.io": "^4.8.1",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {},
   "scripts": {
